packages/svelte/tests/compiler-errors/samples/legacy-no-const-update/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-const-assignment',
		message: 'Invalid assignment to const variable'
	}
});
